--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -32,7 +32,9 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 multidict==6.7.0
+numpy==2.3.4
 packaging==25.0
+pandas==2.3.3
 postgrest==2.22.0
 propcache==0.4.1
 proto-plus==1.26.1
@@ -44,11 +46,14 @@ pydantic==2.12.3
 pydantic_core==2.41.4
 PyJWT==2.10.1
 pyparsing==3.2.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
 realtime==2.22.0
 requests==2.32.5
 rsa==4.9.1
 sgmllib3k==1.0.0
+six==1.17.0
 sniffio==1.3.1
 storage3==2.22.0
 StrEnum==0.4.15
@@ -59,6 +64,7 @@ tenacity==9.1.2
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 websockets==15.0.1
